| Summary: | ASTERISK-26278: asterisk.h should produce a reasonable error for external modules that fail to define AST_MODULE_SELF_SYM. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-08-08 19:10:35 | Date Closed: | 2016-08-09 19:12:03 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 14.0.0-beta1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Asterisk 14+ requires that modules define AST_MODULE_SELF_SYM. Asterisk should produce an understandable error message when not defined for out-of-tree module builds.
Note: the fix for this should be applied to 14.0.0. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-08 19:10:35.611-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||